--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -4,5 +4,5 @@
     width: 100%;
     border-bottom-width: 10px;
     border-bottom-style: solid;
-    background-color: aqua;
+    background-color: aqua
 }
